# SimplePNGDecoder

./: .gitignore  CMakeLists.txt  README.md
include/: png.h  png_exceptions.h  png_utils.h  zlib_utils.h
src/: main.cpp  png.cpp  png_utils.cpp  zlib_utils.cpp
